--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,57 @@
 .main {
     text-align: center;
+    padding: 0 1rem;
+    margin-bottom: 2rem;
+}
+
+.alert {
+    font-size: 0.8rem;
+    color: #eaeaea;
+    font-style: italic;
+    margin: 0.5rem 0;
+}
+
+.form {
+    height: 10rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    transition: height 2s;
+}
+
+.images {
+    margin-top: 1rem;
+}
+
+.image {
+    margin: 0.5rem;
+}
+
+.query {
+    outline: none;
+    height: 2rem;
+}
+
+.select {
+    width: 4rem;
+    height: 2rem;
+    outline: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 1px;
+    text-overflow: '';
+}
+
+.submit {
+    width: 4rem;
+    height: 1.9rem;
+    background-color: #fff;
+    border: none;
+    outline: none;
+}
+
+.submit:hover {
+    background-color: #2a2f4a;
+    color: #eaeaea
 }
