--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,12 @@
 body, html {
     padding: 0;
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: monospace;
+    background: #BBD2C5;
+    background: -webkit-linear-gradient(to right, #292E49, #536976, #BBD2C5);
+    background: linear-gradient(to right, #292E49, #536976, #BBD2C5);
+}
+
+* {
+    box-sizing: border-box;
 }
